src/styles/NewViz.css
.map-container {
    overflow: hidden;
    display: flex;
    flex-direction: row;

    /* border: 1px solid black; */
    height: 85%;
    width: 100vw;
}

.map, .svg {
    top: 0px;
    overflow: hidden;
    /* border: 1px solid black; */
    height: 85vh;
    width: 100%;
}

.legend {
    position: relative;
    /* border: 1px solid black; */
    height: 100%;
    width: 50px;
}

.slider-container {
    overflow: hidden;
    display: flex;
    justify-content: center;
    height: 15vh;
    width: 100vw;
    border-top: 1px solid black;
    padding-left: 10px;
    padding-right: 10px;
}

.NewViz {
    height: 100vh;
    width: 100vw;
    overflow: hidden;
}

