fixed slider bar overflow

--- a/src/styles/NewViz.css
+++ b/src/styles/NewViz.css
@@ -30,8 +30,6 @@
     height: 15vh;
     width: 100vw;
     border-top: 1px solid black;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
 .NewViz {
